--- a/resume/layouts/partials/banner.html
+++ b/resume/layouts/partials/banner.html
@@ -1,4 +1,5 @@
 <div id="print-banner" class="px-2 py-3 text-white text-center font-weight-bold bg-info d-print-none d-none d-md-block">
-    This resume is responsive & printable
-    <a class="btn btn-primary text-white font-weight-bold ml-2 mt-0" href="javascript:window.print();"><i class="fas fa-print"></i> Print</a>
+    This resume is Open Source, responsive & printable
+    <a class="btn btn-primary font-weight-bold ml-2 mt-0" href="javascript:window.print();"><i class="fas fa-print"></i>&nbsp;Print</a>
+    <a class="btn btn-dark font-weight-bold ml-2 mt-0" href="https://github.com/IonBazan/bazan.dev" target="_blank"><i class="fab fa-github"></i>&nbsp;Source code</a><br/>
 </div>
