--- a/resume/layouts/partials/projects.html
+++ b/resume/layouts/partials/projects.html
@@ -4,10 +4,10 @@
     <div class="item mb-3">
         <div class="item-heading row align-items-center mb-2">
             <h5 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">{{ .name }}</h5>
-            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">{{ .technology }}</div>
+            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">{{ .technology }}</div>
         </div>
         <div class="item-content">
-            <p class="text-justify">{{ .description }}</p>
+            <p class="">{{ .description }}</p>
         </div>
     </div>
     {{ end }}
