--- a/resume/assets/scss/main.scss
+++ b/resume/assets/scss/main.scss
@@ -1,3 +1,9 @@
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+        xl: 1140px
+);
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import 'print/print';
 
