--- a/resume/assets/scss/print/print.scss
+++ b/resume/assets/scss/print/print.scss
@@ -1,6 +1,83 @@
 @import 'spacing';
 
+$print-page-size: a3;
+$print-body-min-width: map-get($grid-breakpoints, "lg");
+
 @media print {
+  *,
+  *::before,
+  *::after {
+    text-shadow: none !important;
+    box-shadow: none !important;
+  }
+
+  a {
+    &:not(.btn) {
+      text-decoration: underline;
+    }
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+
+  // Specify a size and min-width to make printing closer across browsers.
+  // We don't set margin here because it breaks `size` in Chrome. We also
+  // don't use `!important` on `size` as it breaks in Chrome.
+  @page {
+    size: $print-page-size;
+  }
+  body {
+    min-width: $print-body-min-width !important;
+  }
+  .container {
+    min-width: $print-body-min-width !important;
+  }
+
+  .badge {
+    border: $border-width solid $black;
+  }
+
+  .table {
+    border-collapse: collapse !important;
+
+    td,
+    th {
+      background-color: $white !important;
+    }
+  }
+
+  .table-bordered {
+    th,
+    td {
+      border: 1px solid $gray-300 !important;
+    }
+  }
+
+  .table-dark {
+    color: inherit;
+
+    th,
+    td,
+    thead th,
+    tbody + tbody {
+      border-color: $table-border-color;
+    }
+  }
+
+  .table .thead-dark th {
+    color: inherit;
+    border-color: $table-border-color;
+  }
+
   .mw-print-100 {
     max-width: 100% !important;
   }
@@ -12,6 +89,14 @@
   .shadow-print { box-shadow: $box-shadow !important; }
   .shadow-print-lg { box-shadow: $box-shadow-lg !important; }
   .shadow-print-none { box-shadow: none !important; }
+
+  .print-page-break-avoid {
+    page-break-inside: avoid;
+  }
+
+  .print-page-break-after {
+    page-break-after: always;
+  }
 }
 
 body {
