--- a/resume/layouts/partials/head.html
+++ b/resume/layouts/partials/head.html
@@ -2,7 +2,6 @@
 <title>{{ .Title }}</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="description" content="{{ $.Site.Data.resume.summary }}">
-<meta property="og:image" content="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100").Permalink }}">
+<meta property="og:image" content="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100 webp").Permalink }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="{{ (resources.Get "scss/main.scss" | toCSS (dict "targetPath" "style.css") | minify | fingerprint).RelPermalink }}">
-{{ hugo.Generator -}}
+<link rel="stylesheet" href="{{ (resources.Get "scss/main.scss" | toCSS (dict "targetPath" "style.css") | resources.PostCSS | minify | fingerprint).RelPermalink }}">
