--- a/resume/layouts/partials/experience.html
+++ b/resume/layouts/partials/experience.html
@@ -8,7 +8,7 @@
                     {{ .position }}
                 </h5>
                 <div class="col-12 col-md-6 col-lg-6 text-muted text-start text-md-end small">
-                    <a class="text-dark" href="{{ .website }}"target="_blank">{{ .company }} [{{ .country }}]</a>
+                    <a class="text-dark" href="{{ .website }}"target="_blank" rel="noreferrer">{{ .company }} [{{ .country }}]</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 text-muted text-start small">
                     {{ .timeperiod }}
