--- a/resume/layouts/partials/header.html
+++ b/resume/layouts/partials/header.html
@@ -4,13 +4,15 @@
             <div class="mb-3 mb-md-0 ms-md-0 me-md-5 flex-shrink-0">
                 <img
                         class="profile-image rounded-circle border"
-                        src="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100").RelPermalink }}"
+                        src="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100 webp").RelPermalink }}"
+                        width="100%"
+                        height="100%"
                         alt="{{ $.Site.Data.resume.name }}"
                 >
             </div>
             <div class="text-start ms-3">
                 <h1 class="mb-0 text-uppercase fw-bold">{{ $.Site.Data.resume.name }}</h1>
-                <h5 class="mb-3 mb-md-0">{{ $.Site.Data.resume.position }}</h5>
+                <h2 class="mb-3 mb-md-0 h5">{{ $.Site.Data.resume.position }}</h2>
             </div>
         </div>
         <div id="contact" class="col-12 col-md-4 small">
