--- a/resume/layouts/partials/projects.html
+++ b/resume/layouts/partials/projects.html
@@ -1,13 +1,25 @@
 <section class="project-section py-3">
-    <h4 class="section-heading">Projects</h4>
+    <h4 class="section-heading">Open-Source Projects</h4>
     {{ range $.Site.Data.resume.projects }}
     <div class="item mb-3">
-        <div class="item-heading row align-items-center mb-2">
-            <h5 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">{{ .name }}</h5>
-            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">{{ .technology }}</div>
+        <div class="item-heading row align-items-center">
+            <h5 class="item-title col-12">
+                <a href="{{ .url }}" class="text-dark" target="_blank">{{ .name }}</a>
+                <small class="hidden d-print-block">({{ .url }})</small>
+            </h5>
+            <div class="col-12 col-md-6 col-lg-6 text-muted small">
+                {{ .timeperiod }}
+            </div>
         </div>
         <div class="item-content">
             <p class="">{{ .description }}</p>
+            {{ if .keywords }}
+            <p>
+                {{ range .keywords }}
+                <span class="badge rounded-pill bg-light text-dark border">{{ . }}</span>
+                {{ end }}
+            </p>
+            {{ end }}
         </div>
     </div>
     {{ end }}
