--- a/resume/assets/scss/print/print.scss
+++ b/resume/assets/scss/print/print.scss
@@ -17,6 +17,12 @@ $print-body-min-width: map-get($grid-breakpoints, "lg");
     }
   }
 
+  @for $i from 1 through $grid-columns {
+    .col-md-#{$i} {
+      @include make-col($i, $grid-columns);
+    }
+  }
+
   p,
   h2,
   h3 {
@@ -37,6 +43,7 @@ $print-body-min-width: map-get($grid-breakpoints, "lg");
   }
   body {
     min-width: $print-body-min-width !important;
+    width: $print-body-min-width !important;
   }
   .container {
     min-width: $print-body-min-width !important;
