Split data and templates into multiple files

--- a/resume/layouts/index.html
+++ b/resume/layouts/index.html
@@ -5,22 +5,23 @@
 </head>
 <body>
     {{ partial "banner.html" . }}
+    {{ with $.Site.Data.resume }}
     <div class="container px-3 px-lg-5 px-print-0 mw-print-100">
         <article id="resume" class="mx-auto p-5 m-5 shadow-lg shadow-print-none m-print-0 p-print-2">
             {{ partial "header.html" . }}
             <hr>
             <div class="py-2">
                 <p class="mb-0">
-                    {{ (replace $.Site.Data.resume.summary "\n" "<br/>") | safeHTML }}
+                    {{ (replace .summary "\n" "<br/>") | safeHTML }}
                 </p>
             </div>
             <hr>
             <div id="resume-body">
                 <div class="row">
                     <div class="col-12 col-md-8 pe-md-5">
-                        {{ partial "experience.html" . }}
-                        {{ if $.Site.Data.resume.projects }}
-                        {{ partial "projects.html" . }}
+                        {{ partial "experience.html" .experience }}
+                        {{ if .projects }}
+                        {{ partial "projects.html" .projects }}
                         {{ end }}
                     </div>
                     {{ partial "sidebar.html" . }}
@@ -28,6 +29,7 @@
             </div>
         </article>
     </div>
+    {{ end }}
 {{ partial "footer.html" . }}
 {{ partial "scripts.html" . }}
 </body>
