--- a/resume/layouts/partials/experience.html
+++ b/resume/layouts/partials/experience.html
@@ -1,17 +1,17 @@
 <section id="experience">
     <h4 class="section-heading">Work Experience</h4>
     <div class="timeline position-relative ps-4">
-        {{ range $.Site.Data.resume.experience }}
+        {{ range sort . "start" "desc" }}
         <div class="item mb-4 position-relative print-page-break-avoid">
             <div class="row align-items-center mb-2">
                 <h5 class="col-12 col-md-6 col-lg-6 mb-2 mb-md-0">
                     {{ .position }}
                 </h5>
-                <div class="col-12 col-md-6 col-lg-6 text-muted text-start text-md-end small">
-                    <a class="text-dark" href="{{ .website }}"target="_blank" rel="noreferrer">{{ .company }} [{{ .country }}]</a>
+                <div class="col-12 col-md-6 col-lg-6 text-muted text-start text-end small">
+                    <a class="text-dark" href="{{ .website }}" target="_blank" rel="noreferrer">{{ .company }} [{{ .country }}]</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 text-muted text-start small">
-                    {{ .timeperiod }}
+                    {{ partial "_timerange.html" . }}
                 </div>
             </div>
             <p class="mb-0">{{ .description }}</p>
