--- a/resume/layouts/partials/projects.html
+++ b/resume/layouts/partials/projects.html
@@ -1,25 +1,33 @@
-<section class="project-section py-3">
+<section id="projects" class="pt-3">
     <h4 class="section-heading">Open-Source Projects</h4>
     {{ range sort . "order" }}
-    <div class="item mb-3">
+    {{ $details := getJSON "https://api.github.com/repos/" .repo }}
+    <div class="item mb-3 print-page-break-avoid">
         <div class="item-heading row align-items-center">
-            <h5 class="item-title col-12">
-                <a href="{{ .url }}" class="text-dark" target="_blank">{{ .name }}</a>
-                <small class="hidden d-print-block">({{ .url }})</small>
+            <h5 class="item-title col-12 mb-0">
+                <a href="{{ $details.html_url }}" class="text-dark" target="_blank">{{ .name }}</a>
             </h5>
+            <span class="hidden d-print-block small">{{ $details.html_url }}</span>
             <div class="col-12 col-md-6 col-lg-6 text-muted small">
-                {{ .timeperiod }}
+                {{ partial "_timerange.html" . }}
             </div>
         </div>
         <div class="item-content">
-            <p class="">{{ .description }}</p>
-            {{ if .keywords }}
+            <p>{{ .description }}</p>
             <p>
+                <span class="badge rounded-pill bg-light text-dark border">
+                    <i class="far fa-fw fa-star"></i> {{ $details.stargazers_count | lang.FormatNumber 0 }}
+                </span>
+                <span class="badge rounded-pill bg-light text-dark border">
+                    <i class="fas fa-fw fa-code-branch"></i> {{ $details.forks_count | lang.FormatNumber 0 }}
+                </span>
+                <span class="badge rounded-pill bg-light text-dark border">
+                    {{ $details.language }}
+                </span>
                 {{ range .keywords }}
                 <span class="badge rounded-pill bg-light text-dark border">{{ . }}</span>
                 {{ end }}
             </p>
-            {{ end }}
         </div>
     </div>
     {{ end }}
