Update experience description

--- a/resume/layouts/partials/projects.html
+++ b/resume/layouts/partials/projects.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="item-content">
-            <p>{{ .description }}</p>
+            <p class="small">{{ .description | markdownify }}</p>
             <p>
                 <span class="badge rounded-pill bg-light text-dark border"><i class="far fa-fw fa-star"></i> {{ $details.stargazers_count | lang.FormatNumber 0 }}</span>
                 <span class="badge rounded-pill bg-light text-dark border"><i class="fas fa-fw fa-code-branch"></i> {{ $details.forks_count | lang.FormatNumber 0 }}</span>
