--- a/resume/layouts/index.html
+++ b/resume/layouts/index.html
@@ -1,41 +1,58 @@
-<!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}" id="html">
-<head>
-    {{ partial "head.html" . }}
-</head>
-<body>
-    {{ partial "banner.html" . }}
-    {{ with $.Site.Data.resume }}
-    <div class="container px-2 px-lg-5 px-print-0 mw-print-100">
-        <article id="resume" class="mx-auto p-3 m-3 p-md-5 m-md-5 shadow-lg shadow-print-none m-print-0 p-print-2">
-            {{ partial "header.html" . }}
-            <hr>
-            <div class="py-2">
-                <p class="mb-0">
+{{- define "main" -}}
+<main class="container">
+    <section class="text-center d-flex align-items-center justify-content-center min-vh-100 my-5 mx-2">
+        <div class="col-md-8">
+            {{ with $.Site.Data.resume }}
+            <div class="hero-avatar">
+                <div class="mb-3 flex-shrink-0">
+                    <img
+                            class="profile-image rounded-circle shadow"
+                            src="{{ ((resources.Get "img/avatar.jpg").Process "resize 600x q100 webp").RelPermalink }}"
+                    width="100%"
+                    height="100%"
+                    alt="{{ .name }}"
+                    >
+                </div>
+            </div>
+            <div class="hero-details">
+                <h1 class="mb-0">{{ .name }}</h1>
+                <h2 class="mb-0 h4">{{ .position }}</h2>
+                {{ with .contact }}
+                <nav class="nav justify-content-center">
+                    <a href="tel:{{ .phone }}" class="nav-link link-body-emphasis">
+                        <i class="fas fa-phone fa-fw"></i>
+                    </a>
+                    <a href="https://{{ .website }}" class="nav-link link-body-emphasis">
+                        <i class="fas fa-globe-asia fa-fw"></i>
+                    </a>
+                    <a href="mailto:{{ .email }}" class="nav-link link-body-emphasis">
+                        <i class="fas fa-envelope fa-fw"></i>
+                    </a>
+                    <a href="https://github.com/{{ .github }}" class="nav-link link-body-emphasis">
+                        <i class="fab fa-github fa-fw"></i>
+                    </a>
+                    <a href="https://github.com/{{ .github }}.gpg" class="nav-link link-body-emphasis">
+                        <i class="fas fa-fingerprint fa-fw"></i>
+                    </a>
+                    <a href="https://{{ .linkedin }}" class="nav-link link-body-emphasis">
+                        <i class="fab fa-linkedin fa-fw"></i>
+                    </a>
+                </nav>
+                {{ end }}
+                <p class="mt-3 text-muted">
+                    {{ $.Page.Content }}
                     {{ .summary | markdownify }}
                 </p>
             </div>
-            <hr>
-            <div id="resume-body">
-                <div class="row">
-                    <div class="col-12 col-md-8 pe-md-5">
-                        {{ partial "experience.html" .experience }}
-
-                        {{ if .projects }}
-                            {{ partial "projects.html" (dict "title" "Projects" "projects" .projects)}}
-                        {{ end }}
-
-                        {{ if .open_source }}
-                            {{ partial "projects.html" (dict "title" "Open-Source Projects" "projects" .open_source) }}
-                        {{ end }}
-                    </div>
-                    {{ partial "sidebar.html" . }}
-                </div>
+            {{ end }}
+            <div class="hero-links">
+                <nav class="nav justify-content-center">
+                    {{- range .Site.Menus.footer }}
+                        <a class="nav-link" href="{{ .URL }}">{{ .Name }}</a>
+                    {{- end }}
+                </nav>
             </div>
-        </article>
-    </div>
-    {{ end }}
-{{ partial "footer.html" . }}
-{{ partial "scripts.html" . }}
-</body>
-</html>
+        </div>
+    </section>
+</main>
+{{- end -}}
