--- a/layouts/partials/socials.html
+++ b/layouts/partials/socials.html
@@ -17,6 +17,9 @@
     <a href="https://github.com/{{ .github }}.gpg" class="nav-link link-body-emphasis px-2">
         <i class="fas fa-fingerprint fa-fw"></i>
     </a>
+    <a href="https://dev.to/{{ .dev_to }}" class="nav-link link-body-emphasis px-2">
+        <i class="fab fa-dev fa-fw"></i>
+    </a>
     <a href="{{ "resume" | relURL }}" class="nav-link link-body-emphasis px-2">
         <i class="far fa-id-card fa-fw"></i>
     </a>
