--- a/layouts/_default/resume.html
+++ b/layouts/_default/resume.html
@@ -1,5 +1,5 @@
 {{- define "header" -}}
-{{ partial "banner.html" . }}
+{{ partial "banner" . }}
 {{- end -}}
 {{- define "main" -}}
 {{ with $.Site.Data.resume }}
