--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -10,7 +10,7 @@
                             src="{{ ((resources.Get "img/profile.jpeg").Process "resize 600x q100 webp").RelPermalink }}"
                     width="100%"
                     height="100%"
-                    alt="{{ .name }}"
+                    alt="{{ .name }} profile photo"
                     >
                 </div>
             </header>
