--- a/layouts/partials/socials.html
+++ b/layouts/partials/socials.html
@@ -1,29 +1,29 @@
 <nav class="nav justify-content-center">
-    <a href="tel:{{ .phone }}" class="nav-link link-body-emphasis px-2">
-        <i class="fas fa-phone fa-fw"></i>
+    <a href="tel:{{ .phone }}" class="nav-link link-body-emphasis px-2" aria-label="Phone" title="Phone">
+        <i class="fas fa-phone fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://{{ .website }}" class="nav-link link-body-emphasis px-2">
-        <i class="fas fa-globe-asia fa-fw"></i>
+    <a href="https://{{ .website }}" class="nav-link link-body-emphasis px-2" aria-label="Website" title="Website">
+        <i class="fas fa-globe-asia fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="mailto:{{ .email }}" class="nav-link link-body-emphasis px-2">
-        <i class="fas fa-envelope fa-fw"></i>
+    <a href="mailto:{{ .email }}" class="nav-link link-body-emphasis px-2" aria-label="E-mail" title="E-mail">
+        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://github.com/{{ .github }}" class="nav-link link-body-emphasis px-2">
-        <i class="fab fa-github fa-fw"></i>
+    <a href="https://github.com/{{ .github }}" class="nav-link link-body-emphasis px-2" aria-label="GitHub profile" title="GitHub profile">
+        <i class="fab fa-github fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://packagist.org/users/{{ .packagist }}" class="nav-link link-body-emphasis px-2">
-        <i class="fas fa-box fa-fw"></i>
+    <a href="https://packagist.org/users/{{ .packagist }}" class="nav-link link-body-emphasis px-2" aria-label="Packagist profile" title="Packagist profile">
+        <i class="fas fa-box fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://github.com/{{ .github }}.gpg" class="nav-link link-body-emphasis px-2">
-        <i class="fas fa-fingerprint fa-fw"></i>
+    <a href="https://github.com/{{ .github }}.gpg" class="nav-link link-body-emphasis px-2" aria-label="GPG key" title="GPG key">
+        <i class="fas fa-fingerprint fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://dev.to/{{ .dev_to }}" class="nav-link link-body-emphasis px-2">
-        <i class="fab fa-dev fa-fw"></i>
+    <a href="https://dev.to/{{ .dev_to }}" class="nav-link link-body-emphasis px-2" aria-label="Dev.to profile" title="Dev.to profile">
+        <i class="fab fa-dev fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="{{ "resume" | relURL }}" class="nav-link link-body-emphasis px-2">
-        <i class="far fa-id-card fa-fw"></i>
+    <a href="{{ "resume" | relURL }}" class="nav-link link-body-emphasis px-2" aria-label="Resume" title="Resume">
+        <i class="far fa-id-card fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="https://{{ .linkedin }}" class="nav-link link-body-emphasis px-2">
-        <i class="fab fa-linkedin fa-fw"></i>
+    <a href="https://{{ .linkedin }}" class="nav-link link-body-emphasis px-2" aria-label="LinkedIn profile" title="LinkedIn profile">
+        <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
     </a>
 </nav>
