--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,3 +6,4 @@
 <meta property="og:image" content="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100 webp").RelPermalink }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="{{ (resources.Get "scss/main.scss" | toCSS (dict "targetPath" "style.css") | resources.PostCSS | minify | fingerprint).RelPermalink }}">
+{{- template "_internal/google_analytics.html" . -}}
