--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,5 +5,6 @@
 <meta name="description" content="{{ $.Site.Data.resume.summary }}">
 <meta property="og:image" content="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100 webp").RelPermalink }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" sizes="any" href="{{"favicon.ico" | relURL}}">
 <link rel="stylesheet" href="{{ (resources.Get "scss/main.scss" | toCSS (dict "targetPath" "style.css") | resources.PostCSS | minify | fingerprint).RelPermalink }}">
 {{- template "_internal/google_analytics.html" . -}}
