--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,17 @@
     {{- block "header" . }}
         {{ partial "corner" . }}
     {{- end }}
-    {{- block "main" . }}{{- end }}
+    {{- block "main" . }}
+    <main class="container" id="hero-main">
+        <article class="text-center d-flex align-items-center justify-content-center min-vh-100 py-5 px-2">
+            <div class="col-md-8">
+                {{- block "hero" . }}
+                    {{- partial "hero" . }}
+                {{- end }}
+            </div>
+        </article>
+    </main>
+    {{- end }}
     {{- partial "footer" . }}
     {{- partial "scripts" . }}
 </body>
