--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,37 +1,31 @@
-{{- define "main" -}}
-<main class="container" id="homepage">
-    <article class="text-center d-flex align-items-center justify-content-center min-vh-100 py-5 px-2">
-        <div class="col-md-8">
-            {{ with $.Site.Data.resume }}
-            <header class="main-avatar">
-                <div class="mb-3 flex-shrink-0">
-                    <img
-                            class="profile-image rounded-circle shadow"
-                            src="{{ ((resources.Get "img/profile.jpeg").Process "resize 600x q100 webp").RelPermalink }}"
-                    width="100%"
-                    height="100%"
-                    alt="{{ .name }} profile photo"
-                    >
-                </div>
-            </header>
-            <section class="main-details">
-                <h1 class="mb-0">{{ .name }}</h1>
-                <h2 class="mb-0 h4">{{ .position }}</h2>
-                {{ partial "socials.html" .contact }}
-                <p class="mt-3 text-muted">
-                    {{ $.Page.Content }}
-                    {{ .summary | markdownify }}
-                </p>
-            </section>
-            {{ end }}
-            <footer class="main-links">
-                <nav class="nav justify-content-center">
-                    {{- range .Site.Menus.footer }}
-                        <a class="nav-link" href="{{ .URL }}">{{ .Name }}</a>
-                    {{- end }}
-                </nav>
-            </footer>
+{{- define "hero" -}}
+    {{ with $.Site.Data.resume }}
+    <header class="main-avatar">
+        <div class="mb-3 flex-shrink-0">
+            <img
+                    class="profile-image rounded-circle shadow"
+                    src="{{ ((resources.Get "img/profile.jpeg").Process "resize 600x q100 webp").RelPermalink }}"
+            width="100%"
+            height="100%"
+            alt="{{ .name }} profile photo"
+            >
         </div>
-    </article>
-</main>
+    </header>
+    <section class="main-details">
+        <h1 class="mb-0">{{ .name }}</h1>
+        <h2 class="mb-0 h4">{{ .position }}</h2>
+        {{ partial "socials.html" .contact }}
+        <p class="mt-3 text-muted">
+            {{ $.Page.Content }}
+            {{ .summary | markdownify }}
+        </p>
+    </section>
+    {{ end }}
+    <footer class="main-links">
+        <nav class="nav justify-content-center">
+            {{- range .Site.Menus.footer }}
+                <a class="nav-link" href="{{ .URL }}">{{ .Name }}</a>
+            {{- end }}
+        </nav>
+    </footer>
 {{- end -}}
