Add Credly profile

--- a/layouts/partials/socials.html
+++ b/layouts/partials/socials.html
@@ -23,8 +23,8 @@
     <a href="https://dev.to/{{ .dev_to }}" class="nav-link link-body-emphasis px-1 px-sm-2" aria-label="Dev.to profile" title="Dev.to profile">
         <i class="fab fa-dev fa-fw" aria-hidden="true"></i>
     </a>
-    <a href="{{ "resume" | relURL }}" class="nav-link link-body-emphasis px-1 px-sm-2" aria-label="Resume" title="Resume">
-        <i class="far fa-id-card fa-fw" aria-hidden="true"></i>
+    <a href="{{ .credly }}" class="nav-link link-body-emphasis px-1 px-sm-2" aria-label="Credly profile" title="Credly profile">
+        <i class="fas fa-certificate fa-fw" aria-hidden="true"></i>
     </a>
     <a href="https://{{ .linkedin }}" class="nav-link link-body-emphasis px-1 px-sm-2" aria-label="LinkedIn profile" title="LinkedIn profile">
         <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
