--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="revised" content="{{ time.Now.Format $.Site.Params.isoDateFormat }}" />
 <meta name="description" content="{{ $.Site.Data.resume.summary }}">
-<meta property="og:image" content="{{ ((resources.Get "img/avatar.jpg").Resize "600x q100 webp").RelPermalink }}">
+<meta property="og:image" content="{{ ((resources.Get "img/profile.jpeg").Resize "600x q100 webp").RelPermalink }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" sizes="any" href="{{"favicon.ico" | relURL}}">
 <link rel="stylesheet" href="{{ (resources.Get "scss/main.scss" | toCSS (dict "targetPath" "style.css") | resources.PostCSS | minify | fingerprint).RelPermalink }}">
