--- a/layouts/partials/project_details.html
+++ b/layouts/partials/project_details.html
@@ -23,8 +23,8 @@
         <p class="small">{{ .description | markdownify }}</p>
         <p>
             {{ if isset . "forks_count" }}
-            <span class="badge rounded-pill bg-light text-dark border"><i class="far fa-fw fa-star"></i> {{ .stargazers_count | lang.FormatNumber 0 }}</span>
-            <span class="badge rounded-pill bg-light text-dark border"><i class="fas fa-fw fa-code-branch"></i> {{ .forks_count | lang.FormatNumber 0 }}</span>
+            <span class="badge rounded-pill bg-light text-dark border"><i class="far fa-fw fa-star"></i> {{ partial "_human_number.html" .stargazers_count }}</span>
+            <span class="badge rounded-pill bg-light text-dark border"><i class="fas fa-fw fa-code-branch"></i> {{ partial "_human_number.html" .forks_count }}</span>
             {{ end }}
             <span class="badge rounded-pill bg-light text-dark border">{{ .language }}</span>
             {{ range .keywords }}
