Reduce font size, add more skills

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
                 >
             </div>
             <div class="text-start ms-3">
-                <h1 class="mb-0 text-uppercase fw-bold">{{ .name }}</h1>
+                <h1 class="mb-0 fw-bold">{{ .name }}</h1>
                 <h2 class="mb-3 mb-md-0 h5">{{ .position }}</h2>
             </div>
         </div>
