--- a/layouts/partials/sidebar/skills.html
+++ b/layouts/partials/sidebar/skills.html
@@ -1,6 +1,6 @@
 <section class="sidebar-section">
     <h4 class="section-heading">Skills & Tools</h4>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled small">
         {{ range . }}
         <li class="mb-2">
             <div class="fw-bold">{{ .name }}:</div>
