--- a/layouts/partials/sidebar/certificates.html
+++ b/layouts/partials/sidebar/certificates.html
@@ -1,6 +1,6 @@
 <section class="sidebar-section">
     <h4 class="section-heading">Certificates</h4>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled small">
         {{ range sort . "date" "desc" }}
         <li class="mb-2">
             <div class="fw-bold">
