--- a/layouts/partials/sidebar/education.html
+++ b/layouts/partials/sidebar/education.html
@@ -1,6 +1,6 @@
 <section class="sidebar-section">
     <h4 class="section-heading">Education</h4>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled small">
         {{ range . }}
         <li class="mb-2">
             <div class="fw-bold">{{ .degree }}</div>
