--- a/layouts/partials/sidebar/interests.html
+++ b/layouts/partials/sidebar/interests.html
@@ -1,8 +1,8 @@
 <section class="sidebar-section">
     <h4 class="section-heading">Interests</h4>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled small">
         {{ range . }}
-        <li class="mb-2">{{ . }}</li>
+        <li>{{ . }}</li>
         {{ end }}
     </ul>
 </section>
