--- a/layouts/partials/sidebar/languages.html
+++ b/layouts/partials/sidebar/languages.html
@@ -1,6 +1,6 @@
 <section class="sidebar-section">
     <h4 class="section-heading">Languages</h4>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled small">
         {{ range $language, $level := . }}
         <li>{{ $language }} <span class="text-muted">({{ $level }})</span></li>
         {{ end }}
