add classic layout

--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -1,4 +1,4 @@
-<section id="projects" class="pt-3">
+<section id="projects" class="pt-3 row">
     <h4 class="section-heading">{{ .title }}</h4>
     {{ range sort .projects "order" }}
     {{ partial "project_details.html" . }}
