--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -84,7 +84,7 @@ $container-max-widths: (
 }
 
 @include media-breakpoint-up('md') {
-  #contact, .sidebar {
+  .sidebar {
     border-left: $border-width solid $border-color !important;
   }
 }
@@ -98,4 +98,12 @@ $container-max-widths: (
   h1 {
     font-size: 12rem;
   }
+}
+
+.font-serif {
+  font-family: "Times New Roman", Times, serif;
+}
+
+hr {
+  color: black;
 }
