--- a/layouts/partials/classic/experience.html
+++ b/layouts/partials/classic/experience.html
@@ -2,7 +2,7 @@
     <h4 class="section-heading">Work Experience</h4>
     <div class="ms-2">
         {{ range sort . "start" "desc" }}
-        <div class="item mb-4 position-relative print-page-break-avoid">
+        <div class="item position-relative print-page-break-avoid">
             <div class="row align-items-center mb-2">
                 <h5 class="mb-0 col-12">
                     {{ .position }}
@@ -14,7 +14,7 @@
                     {{ partial "_timerange.html" . }}
                 </div>
             </div>
-            <p class="mb-2">{{ .description | markdownify }}</p>
+            <p class="mb-0">{{ .description | markdownify }}</p>
             {{ if .technologies }}
             <p>
                 {{ range .technologies }}
