--- a/layouts/partials/classic/header.html
+++ b/layouts/partials/classic/header.html
@@ -1,13 +1,13 @@
 <div id="header">
     <div class="row align-items-center">
         <div id="title" class="col-12 text-center">
-                <img
-                        class="profile-image rounded-circle border"
-                        src="{{ ((resources.Get "img/profile.jpeg").Process "resize 600x q100 webp").RelPermalink }}"
-                width="100%"
-                height="100%"
-                alt="{{ .name }}"
-                >
+<!--                <img-->
+<!--                        class="profile-image rounded-circle border"-->
+<!--                        src="{{ ((resources.Get "img/profile.jpeg").Process "resize 600x q100 webp").RelPermalink }}"-->
+<!--                width="100%"-->
+<!--                height="100%"-->
+<!--                alt="{{ .name }}"-->
+<!--                >-->
                 <h1 class="fw-bold">{{ .name }}</h1>
         </div>
         {{ with .contact }}
