--- a/assets/scss/_webfonts.scss
+++ b/assets/scss/_webfonts.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/brands';
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/solid';
-@import '../../node_modules/@fortawesome/fontawesome-free/scss/regular';
+@use '../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
+@use '../../node_modules/@fortawesome/fontawesome-free/scss/brands';
+@use '../../node_modules/@fortawesome/fontawesome-free/scss/solid';
+@use '../../node_modules/@fortawesome/fontawesome-free/scss/regular';
